<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2014 Laird Technologies. All Rights Reserved.
  
The information contained herein is property of Laird Technologies.
Licensees are granted free, non-transferable use of the information. NO WARRANTY of ANY KIND is provided. 
This heading must NOT be removed from the file.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lairdtech.lairdtoolkit.bloodpressure.BloodPressureActivity" >

    <include
        android:id="@+id/includeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        layout="@layout/item_scan_button" />

    
    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        layout="@layout/common_connected_device_details" />
    
    <LinearLayout
        android:id="@+id/chartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/includeButton"
        android:layout_below="@+id/containerValuesBloodPressure"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:orientation="vertical" >

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/containerValuesBloodPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/include1"
        android:layout_alignRight="@+id/include1"
        android:layout_below="@+id/include1"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/labelSystolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/systolic"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valueSystolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/valueDiastolic"
            android:layout_alignParentTop="true"
            android:text="@string/non_applicable" />

        <TextView
            android:id="@+id/labelDiastolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelSystolic"
            android:text="@string/diastolic"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valueDiastolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueSystolic"
            android:layout_toRightOf="@id/labelDiastolic"
            android:text="@string/non_applicable" />

        <TextView
            android:id="@+id/labelArterialPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelDiastolic"
            android:text="@string/arterial_pressure"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valueArterialPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueDiastolic"
            android:layout_toRightOf="@id/labelArterialPressure"
            android:text="@string/non_applicable" />
    </RelativeLayout>

</RelativeLayout>